src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>I_Created__c</fullName>
        <description>True if the current user&apos;s username is the same user that created the Opportunity, else false.  Does not work if the user has a new username or changed user name.</description>
        <formula>IF($User.Username =  CreatedBy.Username, TRUE, FALSE)</formula>
        <inlineHelpText>True if the current user is the same user that created the Opportunity, otherwise False</inlineHelpText>
        <label>I Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Lost_Details__c</fullName>
        <description>Used to explain the details around the opportunity being lost, including user roadblocks information that would have helped, and why the deal was lost.  Required when other, competitor, and when closing from late stages</description>
        <inlineHelpText>Explain the details around the opportunity being lost, including any roadblocks you encountered while working the deal, information that would have helped you win, and finally, wh the deal was not won.</inlineHelpText>
        <label>Reason Lost Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <description>The primary reason why this Opportunity is Closed-Lost. Partners with the Closed Lost Detail field for additional information.</description>
        <inlineHelpText>The primary reason why this Opportunity is Closed-Lost.  You can use the Closed Lost Detail to explain, and if necessary, there you can mention additional reasons that factor in.</inlineHelpText>
        <label>Reason Lost</label>
        <picklist>
            <picklistValues>
                <fullName>Change in Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacking Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of Momentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>